# repath

./: .dockerignore  .env.example  .gitignore  BUILD_PROGRESS.md  BUILD_STATUS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.controller  Dockerfile.evaluator  Dockerfile.gateway  GITHUB_LAUNCH_READY.md  LICENSE  PROJECT_HANDOFF.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  docker-compose.prod.yml  docker-compose.yml  fly-evaluator.toml  fly.controller.toml  fly.evaluator.toml  fly.toml
.github/workflows/: ci.yml  controller-health.yml  release.yml  sync-dashboard.yml
crates/cli/: Cargo.toml
crates/cli/src/: display.rs  main.rs
crates/cli/src/commands/: create.rs  history.rs  list.rs  mod.rs  pause_resume.rs  promote_rollback.rs  status.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  types.rs
crates/controller/: Cargo.toml
crates/controller/src/: decision.rs  lib.rs  loop_runner.rs  main.rs  metrics.rs  metrics_aggregator.rs  policy.rs  store.rs
crates/controller/tests/: integration_test.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: auth.rs  circuit_breaker.rs  config.rs  main.rs  server.rs
crates/gateway/src/api/: cloud.rs  handlers.rs  mod.rs
crates/gateway/src/db/: mod.rs  pool.rs  rollouts.rs  versions.rs
crates/gateway/src/observability/: metrics.rs  mod.rs  tracing_setup.rs
crates/gateway/src/proxy/: client.rs  failover.rs  handler.rs  mod.rs  provider.rs  streaming.rs
crates/gateway/src/recorder/: eval_queue.rs  mod.rs  request_logger.rs
crates/gateway/src/router/: mod.rs  version_selector.rs
dashboard/: middleware.ts  package-lock.json  package.json  tsconfig.json  vercel.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/about/: page.tsx
dashboard/app/api/account/delete/: route.ts
dashboard/app/api/auth/login/: route.ts
dashboard/app/api/auth/logout/: route.ts
dashboard/app/api/auth/refresh-session/: route.ts
dashboard/app/api/auth/session/: route.ts
dashboard/app/api/auth/signup/: route.ts
dashboard/app/api/billing/paddle/create-checkout/: route.ts
dashboard/app/api/billing/razorpay/create-order/: route.ts
dashboard/app/api/billing/razorpay/verify-payment/: route.ts
dashboard/app/api/billing/usage/: route.ts
dashboard/app/api/gateway/[...path]/: route.ts
dashboard/app/api/system/providers/: route.ts
dashboard/app/billing/: layout.tsx  page.tsx
dashboard/app/billing/success/: page.tsx
dashboard/app/careers/: page.tsx
dashboard/app/contact/: page.tsx
dashboard/app/docs/: page.tsx
dashboard/app/login/: page.tsx
dashboard/app/onboarding/: page.tsx
dashboard/app/pricing/: page.tsx
dashboard/app/privacy/: page.tsx
dashboard/app/rollouts/: layout.tsx  page.tsx
dashboard/app/rollouts/[id]/: page.tsx
dashboard/app/settings/: layout.tsx  page.tsx
dashboard/app/signup/: page.tsx
dashboard/app/status/: page.tsx
dashboard/app/terms/: page.tsx
dashboard/components/: DecisionFeed.tsx  MetricCard.tsx  ProviderHealth.tsx  QualityGraph.tsx  Sidebar.tsx  StateBadge.tsx  StepTimeline.tsx  TrafficBar.tsx
dashboard/lib/: api.ts  auth.ts  hooks.ts  utils.ts
dashboard/repath-landing/: ideas.md  package.json  pnpm-lock.yaml  template.json
dashboard/repath-landing/client/: index.html
dashboard/repath-landing/client/src/: App.tsx  index.css
dashboard/repath-landing/client/src/components/: ComparisonTable.tsx  FeaturesSection.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navigation.tsx  OpenSourceBanner.tsx  ProblemSection.tsx  QuickStart.tsx
dashboard/repath-landing/client/src/components/dashboard/: DashboardSidebar.tsx  DecisionFeed.tsx  LiveIndicator.tsx  MetricsGrid.tsx  QualityScoreChart.tsx  RolloutCard.tsx  StateBadge.tsx  StepTimeline.tsx  TrafficSplitBar.tsx
dashboard/repath-landing/client/src/pages/: Dashboard.tsx  Home.tsx  RolloutDetail.tsx  RolloutsList.tsx
dashboard/repath-landing/drizzle/: 0001_third_shriek.sql  schema.ts
doc/: help.html  runbook.md  settings.html
doc/rust_out/: all.html  index.html
doc/search.index/: root.js
evaluators/: pyproject.toml
evaluators/src/repath_evaluators/: __init__.py  config.py  db.py  logging_setup.py  scorer.py  worker.py
evaluators/src/repath_evaluators/evaluators/: __init__.py  llm_judge.py  programmatic.py
evaluators/tests/: test_programmatic.py  test_scorer.py
examples/: demo-canary.yaml  simulate_traffic.py
infra/: README.md  amplify.tf  ec2.tf  ecr.tf  iam.tf  network.tf  outputs.tf  rds.tf  ssm.tf  terraform.tfvars.example  variables.tf
migrations/: 001_initial_schema.sql  002_multi_provider_and_tenants.sql  003_tenant_auth.sql  004_provider_fallback.sql
scripts/: deploy-aws.sh  deploy-cloud.sh  load-test.py  run-load-test.sh  set-fly-secrets.sh  sync-dashboard.sh
tests/: integration_test.py
