[workspace]
members = [
    "crates/gateway",
    "crates/controller",
    "crates/common",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = ["Repath Team"]
license = "BSL-1.1"
repository = "https://github.com/repath/repath"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# HTTP server & client
axum = { version = "0.7", features = ["macros", "json"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.27", features = ["tokio-rustls-comp", "streams", "connection-manager"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.25"
opentelemetry = { version = "0.24", features = ["metrics"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-prometheus = "0.17"
prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
console = "0.15"
indicatif = "0.17"
comfy-table = "7.1"
colored = "2.1"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
rand = "0.8"
async-trait = "0.1"
futures = "0.3"
bytes = "1.7"
http = "1.1"
http-body-util = "0.1"
tokio-stream = "0.1"

# Lock-free read-heavy shared state (rollout config cache)
# Critical: ArcSwap gives lock-free reads via atomic pointer swap.
# At 50K req/s, Arc<RwLock> would serialize all readers behind any writer.
arc-swap = "1.7"

# Security
ring = "0.17"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2  # Dependencies optimized even in dev mode for better performance
