[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repath-evaluators"
version = "0.1.0"
description = "Quality evaluation workers for the Repath AI deployment controller"
requires-python = ">=3.11"
dependencies = [
    # Redis Streams consumer
    "redis[hiredis]>=5.0",
    # PostgreSQL async driver
    "asyncpg>=0.29",
    # OpenAI SDK for LLM-as-judge
    "openai>=1.30",
    # Retry logic with exponential backoff
    "tenacity>=8.3",
    # Structured logging
    "structlog>=24.1",
    # Settings management from environment
    "pydantic-settings>=2.2",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",   # linting + formatting
]

[project.scripts]
repath-evaluator = "repath_evaluators.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["src/repath_evaluators"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
