[package]
name = "repath-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }

# Database (for From<sqlx::Error> conversion in error.rs)
sqlx = { workspace = true }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Utilities
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
