[package]
name = "repath-controller"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "repath-controller"
path = "src/main.rs"

[dependencies]
repath-common = { path = "../common" }
tokio = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
prometheus = { workspace = true }

[lib]
name = "repath_controller"
path = "src/lib.rs"

[dev-dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
