[package]
name = "repath-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "repath-gateway"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
repath-common = { path = "../common" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# HTTP server & client
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
reqwest = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Database
sqlx = { workspace = true }

# Redis
redis = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
tokio-stream = { workspace = true }
arc-swap = { workspace = true }

# Security
ring = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
mockall = "0.13"
